# gim

./: Makefile  README.md  pyproject.toml
data/raw/fever/: split.csv  subset.csv
data/raw/hatexplain/: split.csv  subset.csv
data/raw/twitter/: split.csv  subset.csv
results/: ablation_table.py  ablation_table_mean.py  aopc_table.py  dataset_table.py  hyperparameter.py  layers_aopc.py  prediction_table.py
src/: models.py
src/configs/: prompt_config.py
src/evaluation/: evaluate_feature_attributions.py  evaluate_layers.py  evaluate_models.py  evaluate_self_repair.py
src/feature_attribution_methods/: feature_attribution_methods.py
src/gim/: __init__.py  attention.py  config.py  gim.py  layernorm.py  mlp.py  utils.py
src/gim/context/: attention.py  gim.py  happy_path_hf.py  happy_path_tlens.py  norm.py  softmax.py
src/utils/: analysis_tools.py  dataset_factory.py  get_datasets.py  make_subsets.py  tensor.py  tokenizer.py  visualization.py
